# dotfiles

./: .LICENSE  .README.md  .Xmodmap  .Xmodmap.xps13  .Xresources  .alexrc  .bash.skeleton  .bash_aliases  .bash_completion  .bash_git  .bash_profile  .bash_ps1  .bash_settings  .bashrc  .dotfiles.setup.py  .gemrc  .gitconfig  .gitignore  .gitmodules  .inputrc  .ldaprc  .mailcap  .packages-install.sh  .profile  .screenrc  .tmux-newwin  .tmux.conf  .vale.ini  .vim_plugins  .vimplugins.vim  .vimrc  .xsession  Makefile
.audacity-data/: Tags.xml  audacity.cfg  pluginsettings.cfg  tags-decipherhistory.xml  tags-decipherscifi.xml
.audacity-files/: setup.sh
.bash.d/: .md5sum.swp  apt  bash  bw  cd  curl  date  diff  dig  eyeD3  ffmpeg  fzf  git  grep  i3  jmtpfs  jq  less  ls  md5sum  misc  mosh  mv  openssl  python  ruby  screen  sort  ssh  stty  sudo  tmux  tree  unetbootin  units  vim  xclip  xdg
.bash_completion.d/: cookiecutter  rclone
.bin/: bright  certs  docxmd2pdf  dotfiles-setup.py  email_to_trello  gifgen  h5toflac  httplen  i3keys  (+27 more)
.cookiecutters/icinga_nagios_plugin/{{cookiecutter.project_name}}/: .gitignore  CHANGELOG.md  Makefile  README.md  gitignore  requirements-make.txt  requirements.txt  setup.cfg  setup.py
.cookiecutters/icinga_nagios_plugin/{{cookiecutter.project_name}}/tests/: __init__.py  test_endtoend.py
.cookiecutters/icinga_nagios_plugin/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: __init__.py  __main__.py
.cookiecutters/icinga_nagios_plugin/{{cookiecutter.project_name}}/{{cookiecutter.resource_class_name}}/: __init__.py
(+95 files in other folders)
