[metadata]
author = {{cookiecutter.person_or_organization_name}}
author_email = {{cookiecutter.person_or_organization_email}}
classifiers =
    Programming Language :: Python :: 3
    {{cookiecutter.license}}
    Operating System :: OS Independent
description = {{cookiecutter.project_name}} is an Icinga2/Nagios plugin which {{cookiecutter.project_description}}

long_description = file: README.md
long_description_content_type = text/markdown
name = {{cookiecutter.project_name}}
project_urls =
    Documentation = 
    Bug Tracker = 
    Source = 
url = 
version = attr: {{cookiecutter.project_name}}.__version__

[options]
install_requires =
	nagiosplugin>=1.3.3,<2.0.0
packages = find:
package_dir =
	=./
python_requires = >=3.6
scripts =
	bin/{{cookiecutter.project_name}}

[options.packages.find]
where = ./
exclude = tests*
